--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Young men -- Fiction'
 - !lcsh 'Fathers and sons -- Fiction'
+- GITenberg
 title: The Young Duke
 url: http://www.gutenberg.org/ebooks/20008
